--- a/.env
+++ b/.env
@@ -1,1 +1,18 @@
-HF_HOTSHOT_XL_API_URL="https://jbilcke-hf-hotshot-xl-api.hf.space/"
+
+# TODO: those could be
+# VIDEO_HOTSHOT_XL_API_OFFICIAL
+# VIDEO_HOTSHOT_XL_API_JBILCKE
+# VIDEO_HOTSHOT_XL_API_FFFILONI
+VIDEO_ENGINE="VIDEO_HOTSHOT_XL_API_JBILCKE"
+
+# the official API developed by the Hotshot-XL team
+# note: it isn't released yet
+VIDEO_HOTSHOT_XL_API_OFFICIAL=""
+
+# the API developed by @jbilcke-hf (me) to allow using any LoRA
+# note: doesn't work yet
+VIDEO_HOTSHOT_XL_API_JBILCKE="https://jbilcke-hf-hotshot-xl-api.hf.space/"
+
+# the Gradio Space (with the auto API) developed by @fffiloni
+# note: just released
+VIDEO_HOTSHOT_XL_API_FFFILONI="https://fffiloni-text-to-gif.hf.space/"
