let's add more backends

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 
+
+
+AUTH_REPLICATE_API_TOKEN="<YOUR SECRET>"
+
 # TODO: those could be
 # VIDEO_HOTSHOT_XL_API_OFFICIAL
 # VIDEO_HOTSHOT_XL_API_NODE
