--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-
-
-
-AUTH_REPLICATE_API_TOKEN="<YOUR SECRET>"
+AUTH_REPLICATE_API_TOKEN="<USE YOUR OWN>"
+AUTH_HOTSHOT_XL_API_GRADIO_ACCESS_TOKEN="<USE YOUR OWN>"
 
 # TODO: those could be
 # VIDEO_HOTSHOT_XL_API_OFFICIAL
@@ -16,12 +14,12 @@ VIDEO_HOTSHOT_XL_API_OFFICIAL=""
 
 # the Node API developed by @jbilcke-hf (me) to allow using any LoRA
 # note: doesn't work yet
-VIDEO_HOTSHOT_XL_API_NODE="https://jbilcke-hf-hotshot-xl-api.hf.space/"
+VIDEO_HOTSHOT_XL_API_NODE="https://jbilcke-hf-hotshot-xl-api.hf.space"
 
 # the Gradio Space (with the auto API) developed by @fffiloni
 # forked to support multiple LoRAs too
 # note: work in progress
-VIDEO_HOTSHOT_XL_API_GRADIO="https://jbilcke-hf-hotshot-xl-server.hf.space/"
+VIDEO_HOTSHOT_XL_API_GRADIO="https://jbilcke-hf-hotshot-xl-server-1.hf.space"
 
 # If you decided to use Replicate for the RENDERING engine
 VIDEO_HOTSHOT_XL_API_REPLICATE_MODEL="cloneofsimo/hotshot-xl-lora-controlnet"
