added the model picker

--- a/.env
+++ b/.env
@@ -37,4 +37,4 @@ COMMUNITY_API_URL="https://jbilcke-hf-community.hf.space"
 COMMUNITY_API_TOKEN=""
 
 # must be unique per app
-COMMUNITY_APP_ID=""
+COMMUNITY_API_ID=""
