--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/uuid": "^9.0.2",
+    "@upstash/ratelimit": "^0.4.4",
+    "@upstash/redis": "^1.23.4",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^2.0.0",
