let's use gradio by default

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ VIDEO_ENGINE="VIDEO_HOTSHOT_XL_API_GRADIO"
 # TODO: support multiple backends
 # STMFNET_REPLICATE
 # FILM_GRADIO
-INTERPOLATION_ENGINE="STMFNET_REPLICATE"
+INTERPOLATION_ENGINE="FILM_GRADIO"
 
 # the official API developed by the Hotshot-XL team
 # note: it isn't released yet
